Ensure gutter drop-shadow always extends to bottom of window, even if file is shorter.
This is fragile. Had to apply a min-height of 100% to horizontal scroller. If I apply it to gutter it causes rendering artifacts. I think we're on the edge of the flexbox code here and may even be causing crashes.

--- a/static/editor.css
+++ b/static/editor.css
@@ -30,6 +30,7 @@
 .editor .horizontal-scroller {
   overflow-x: auto;
   width: -webkit-flex(1);
+  min-height: 100%;
 }
 
 .editor.soft-wrap .horizontal-scroller {
